# nonebot-plugin-lingyi-chat

./: README.md  pyproject.toml
nonebot_plugin_lingyi_chat/: __init__.py  config.py
